deployment/staging/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grill-notifications
  name: grill-notifications
  namespace: sub-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grill-notifications
  template:
    metadata:
      labels:
        app: grill-notifications
      name: grill-notifications
    spec:
      containers:
      - image: <IMAGE>
        imagePullPolicy: IfNotPresent
        name: grill-notifications
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: "/var/run/secrets/"
            name: firebase
            readOnly: true
      volumes:
        - name: firebase
          secret:
            secretName: grill-notifications-firebase-secret
      imagePullSecrets:
      - name: dockerhub
      restartPolicy: Always
