deployment/staging/all.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grill-notifications
  name: grill-notifications
  namespace: sub-back
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grill-notifications
  type: ClusterIP

---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: grill-notifications
    namespace: sub-back
    annotations:
      ingress.kubernetes.io/from-to-www-redirect: "true"
      nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
      nginx.org/client-max-body-size: "10m"
      nginx.org/client-max-body-size: "10m"
      nginx.ingress.kubernetes.io/proxy-body-size: "10m"
      nginx.ingress.kubernetes.io/client-max-body-size: "10m"

  spec:
    ingressClassName: nginx
    rules:
      - host: staging-grill-notifications.subsocial.network
        http:
          paths:
            - backend:
                service:
                  name: grill-notifications
                  port:
                    number: 3000
              path: /
              pathType: Prefix

    tls:
      - hosts:
        - staging-grill-notifications.subsocial.network
        secretName: subsocial-ssl
